Fix: add search
